force-app/main/default/objects/Document_Esign__c/Document_Esign__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Document Esign</label>
</CustomObject>