force-app/main/default/objects/Document_Esign__c/fields/Active_Esign_Channel__c.field-meta.xml
<CustomField>
    <fullName>Active_Esign_Channel__c</fullName>
    <description>Active Esign Channel</description>
    <label>Active Esign Channel</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>