force-app/main/default/objects/Document_Esign__c/fields/Active_Esign_Service__c.field-meta.xml
<CustomField>
    <fullName>Active_Esign_Service__c</fullName>
    <description>Active Esign Service</description>
    <label>Active Esign Service</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>