force-app/main/default/objects/Document_Esign__c/fields/Esign_Admin_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Esign_Admin_User_Name__c</fullName>
    <description>Used to store Esign Admin UserName</description>
    <label>Esign Admin User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>