force-app/main/default/objects/Document_Esign__c/fields/Esign_Service__c.field-meta.xml
<CustomField>
    <fullName>Esign_Service__c</fullName>
    <description>Name of the Esign Service to use.</description>
    <label>Esign Service</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>