force-app/main/default/objects/Document_Esign__c/fields/Esign_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Esign_Webhook_URL__c</fullName>
    <description>Esign Webhook URL to be called by callout.</description>
    <label>Esign Webhook URL</label>
    <type>Url</type>
</CustomField>